Make table responsive and add footer component

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,9 +14,8 @@
 .navbar li {
   cursor: pointer;
 }
-.navbar-right {
+.nav-right {
   display: flex;
-  align-items: center;
   gap: 1rem;
 }
 .navbar select {
