--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ a {
 .app {
   min-height: 100vh;
   color: white;
-  /* background: linear-gradient(#0b004e, #1d152f, #002834); */
+  display: flex;
+  flex-direction: column;
   background-image: linear-gradient(
     to top,
     #f0f0f0,
